--- a/frontend/admin-dashboard/public/clienthome.html
+++ b/frontend/admin-dashboard/public/clienthome.html
@@ -41,6 +41,77 @@
             document.body.appendChild(modal);
         }
 
+        // Tab switching function - defined early so it's available when HTML elements call it
+        function showTab(index) {
+            console.log('🔄 showTab() called with index:', index);
+
+            // Check if load functions are available, if not wait for scripts to load
+            if (typeof loadUsers !== 'function') {
+                console.log('⏳ Load functions not ready yet, waiting...');
+                setTimeout(() => showTab(index), 100);
+                return;
+            }
+
+            console.log('All tab contents before:', document.querySelectorAll('.tab-content'));
+            console.log('Active tabs before:', document.querySelectorAll('.tab-content.active'));
+
+            // Hide all tab contents - remove active class from all
+            const tabContents = document.querySelectorAll('.tab-content');
+            tabContents.forEach((content, i) => {
+                content.classList.remove('active');
+                console.log(`Tab ${i} hidden`);
+            });
+
+            // Remove active class from all tab buttons
+            const tabButtons = document.querySelectorAll('.tab-button');
+            tabButtons.forEach((button, i) => {
+                button.classList.remove('active');
+                console.log(`Button ${i} deactivated`);
+            });
+
+            // Show selected tab
+            const targetContent = tabContents[index];
+            const targetButton = tabButtons[index];
+
+            console.log('Target content:', targetContent);
+            console.log('Target button:', targetButton);
+
+            if (targetContent && targetButton) {
+                targetContent.classList.add('active');
+                targetButton.classList.add('active');
+                console.log('✅ Successfully switched to tab:', index);
+                console.log('Active tabs after:', document.querySelectorAll('.tab-content.active'));
+            } else {
+                console.error('❌ Tab switching failed - element not found for index:', index);
+                console.log('Available tab contents:', tabContents.length);
+                console.log('Available tab buttons:', tabButtons.length);
+                console.log('Tab content IDs:', Array.from(tabContents).map(el => el.id));
+            }
+
+            // Load content when tabs are shown
+            if (index === 0) {
+                loadUsers(); // User Management tab
+            } else if (index === 1) {
+                loadNewsItems(); // News & Updates tab
+                // Ensure clinical trial selector is populated for the current user role
+                setTimeout(() => {
+                    populateNewsClinicalTrialSelector();
+                }, 100);
+            } else if (index === 2) {
+                loadLeaderboard(); // Enrollment Leaderboard tab
+            } else if (index === 3) {
+                loadClinicalTrials(); // Clinical Trials tab
+            } else if (index === 4) {
+                loadPDFDocuments(); // Training Materials tab
+            } else if (index === 5) {
+                loadPDFDocuments(); // Study Protocol tab
+            } else if (index === 6) {
+                loadAnalytics(); // Analytics tab
+            } else if (index === 7) {
+                loadMessages(); // Messaging tab
+            }
+        }
+
 
     </script>
     <style>
@@ -5049,68 +5120,6 @@ ${endpointStatus.join('\n')}
             }
         }
 
-        // Tab switching function - defined after all load functions so they're available
-        function showTab(index) {
-            console.log('🔄 showTab() called with index:', index);
-            console.log('All tab contents before:', document.querySelectorAll('.tab-content'));
-            console.log('Active tabs before:', document.querySelectorAll('.tab-content.active'));
-
-            // Hide all tab contents - remove active class from all
-            const tabContents = document.querySelectorAll('.tab-content');
-            tabContents.forEach((content, i) => {
-                content.classList.remove('active');
-                console.log(`Tab ${i} hidden`);
-            });
-
-            // Remove active class from all tab buttons
-            const tabButtons = document.querySelectorAll('.tab-button');
-            tabButtons.forEach((button, i) => {
-                button.classList.remove('active');
-                console.log(`Button ${i} deactivated`);
-            });
-
-            // Show selected tab
-            const targetContent = tabContents[index];
-            const targetButton = tabButtons[index];
-
-            console.log('Target content:', targetContent);
-            console.log('Target button:', targetButton);
-
-            if (targetContent && targetButton) {
-                targetContent.classList.add('active');
-                targetButton.classList.add('active');
-                console.log('✅ Successfully switched to tab:', index);
-                console.log('Active tabs after:', document.querySelectorAll('.tab-content.active'));
-            } else {
-                console.error('❌ Tab switching failed - element not found for index:', index);
-                console.log('Available tab contents:', tabContents.length);
-                console.log('Available tab buttons:', tabButtons.length);
-                console.log('Tab content IDs:', Array.from(tabContents).map(el => el.id));
-            }
-
-            // Load content when tabs are shown
-            if (index === 0) {
-                loadUsers(); // User Management tab
-            } else if (index === 1) {
-                loadNewsItems(); // News & Updates tab
-                // Ensure clinical trial selector is populated for the current user role
-                setTimeout(() => {
-                    populateNewsClinicalTrialSelector();
-                }, 100);
-            } else if (index === 2) {
-                loadLeaderboard(); // Enrollment Leaderboard tab
-            } else if (index === 3) {
-                loadClinicalTrials(); // Clinical Trials tab
-            } else if (index === 4) {
-                loadPDFDocuments(); // Training Materials tab
-            } else if (index === 5) {
-                loadPDFDocuments(); // Study Protocol tab
-            } else if (index === 6) {
-                loadAnalytics(); // Analytics tab
-            } else if (index === 7) {
-                loadMessages(); // Messaging tab
-            }
-        }
     </script>
 </body>
 </html>
