Fix API_BASE_URL condition for production environment

--- a/frontend/admin-dashboard/public/clienthome.html
+++ b/frontend/admin-dashboard/public/clienthome.html
@@ -19,8 +19,8 @@
             }
             
             // Production - use the configured Render backend URL
-            // Make sure to update RENDER_BACKEND_URL above with your actual backend URL
-            if (RENDER_BACKEND_URL && RENDER_BACKEND_URL !== 'https://client-backend-and-mobile-app.onrender.com') {
+            // Use the configured Render backend URL if it's properly set
+            if (RENDER_BACKEND_URL && RENDER_BACKEND_URL !== 'https://YOUR-ACTUAL-BACKEND-SERVICE.onrender.com') {
                 return RENDER_BACKEND_URL;
             }
             
